@@ -21,6 +21,9 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
@@ -37,6 +40,7 @@ import static at.ac.tuwien.sepr.groupphase.backend.entity.RecipeIngredient.Unit.
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.springframework.test.util.AssertionErrors.assertTrue;
 
 @SpringBootTest
 @ActiveProfiles({"test"})
@@ -87,42 +91,37 @@ class RecipeServiceTest implements TestData {
 
     @Test
     void ReturnAListOfOneRecipeListDtoFromGetAllFromPageOneWithStepOne() {
-        List<RecipeListDto> expectedRecipeListDtos = List.of(
-            new RecipeListDto(1, "Spagehtti plain", "Unterrezept für alle möglichen Nudelgerichte", 0));
-        List<RecipeListDto> recipes = recipeService.getRecipesFromPageInSteps(1, 1);
-        Assertions.assertEquals(1, recipes.size());
-        Assertions.assertEquals(expectedRecipeListDtos, recipes);
-    }
-
-    @Test
-    void ReturnAListOfTwoRecipeListDtoFromGetAllFromPageOneWithStepThree() {
-        List<RecipeListDto> recipes = recipeService.getRecipesFromPageInSteps(1, 2);
-        Assertions.assertEquals(2, recipes.size());
+        Pageable pageable = PageRequest.of(0, 1);
+        Page<RecipeListDto> recipes = recipeService.getRecipesByName("Spagehtti plain", pageable);
+        assertEquals(1, recipes.getTotalElements());
+        assertEquals("Spagehtti plain", recipes.getContent().get(0).name());
     }
 
     @Test
     void ReturnAnEmptyListOfRecipeListDtoFromGetAllFromPageTwohundredWithStepTwohundred() {
-        List<RecipeListDto> recipes = recipeService.getRecipesFromPageInSteps(200, 200);
+        Pageable pageable = PageRequest.of(0, 200);
+        Page<RecipeListDto> recipes = recipeService.getRecipesByName("Nonexistent", pageable);
         Assertions.assertTrue(recipes.isEmpty());
     }
+
     @Test
-    void CreateRecipeShouldCreateRecipePlusDependencies() throws Exception{
+    void CreateRecipeShouldCreateRecipePlusDependencies() throws Exception {
         userAuthenticationByEmail("admin@email.com");
         List<RecipeCategoryDto> recipeCategoryDtoList = new ArrayList<>();
         recipeCategoryDtoList.add(new RecipeCategoryDto(1));
 
         List<RecipeIngredientDto> recipeIngredientDtos = new ArrayList<>();
-        recipeIngredientDtos.add(new RecipeIngredientDto(1,new BigDecimal(6),"g"));
-        recipeIngredientDtos.add(new RecipeIngredientDto(132,new BigDecimal(12.5),"g"));
+        recipeIngredientDtos.add(new RecipeIngredientDto(1, new BigDecimal(6), "g"));
+        recipeIngredientDtos.add(new RecipeIngredientDto(132, new BigDecimal(12.5), "g"));
 
         List<RecipeStepDto> recipeStepDtoList = new ArrayList<>();
-        recipeStepDtoList.add(new RecipeStepDto("Step eins","Beschreibung von Step 1",0,true ));
-        recipeStepDtoList.add(new RecipeStepDto("Step zwei","Beschreibung von Step 2",0,true ));
+        recipeStepDtoList.add(new RecipeStepDto("Step eins", "Beschreibung von Step 1", 0, true));
+        recipeStepDtoList.add(new RecipeStepDto("Step zwei", "Beschreibung von Step 2", 0, true));
 
         RecipeCreateDto recipeCreateDto = new RecipeCreateDto();
         recipeCreateDto.setName("Name");
         recipeCreateDto.setDescription("Beschreibung");
-        recipeCreateDto.setServings((short)42);
+        recipeCreateDto.setServings((short) 42);
 
         recipeCreateDto.setIngredients(recipeIngredientDtos);
         recipeCreateDto.setSteps(recipeStepDtoList);
@@ -137,8 +136,8 @@ class RecipeServiceTest implements TestData {
         Recipe recipefDB = recipeRepository.getRecipeById(retid).get();
         Assertions.assertNotNull(recipefDB);
 
-        Assertions.assertEquals(recipefDB.getName(),recipeCreateDto.getName());
-        Assertions.assertEquals(recipefDB.getDescription(),recipeCreateDto.getDescription());
+        Assertions.assertEquals(recipefDB.getName(), recipeCreateDto.getName());
+        Assertions.assertEquals(recipefDB.getDescription(), recipeCreateDto.getDescription());
         Assertions.assertEquals(recipefDB.getNumberOfServings(), recipeCreateDto.getServings());
 
         Assertions.assertTrue(
@@ -150,27 +149,24 @@ class RecipeServiceTest implements TestData {
         Assertions.assertTrue(
             IntStream.range(0, recipeCategoryDtoList.size())
                 .allMatch(i -> recipefDB.getCategories().get(i).getId() == recipeCategoryDtoList.get(i).getId()));
-
     }
 
     @Test
-    public void searchByNameShouldFind() {
-
-        var recipe = recipeService.searchRecipe("Apfelkuchen");
-        assertNotNull(recipe);
-        assertThat(recipe)
-            .hasSize(2);
-        assertEquals("Apfelkuchen nach Ing", recipe.getFirst().name());
+    void searchByNameShouldFind() {
+        Pageable pageable = PageRequest.of(0, 10);
+        var recipePage = recipeService.getRecipesByName("Apfelkuchen", pageable);
+        assertNotNull(recipePage);
+        assertThat(recipePage.getContent()).hasSize(2);
+        assertEquals("Apfelkuchen nach Ing", recipePage.getContent().get(0).name());
     }
 
     @Test
-    public void searchByNameShouldNotFind() {
+    void searchByNameShouldNotFind() {
+        Pageable pageable = PageRequest.of(0, 10);
+        var recipePage = recipeService.getRecipesByName("Gurke", pageable);
+        Assertions.assertTrue(recipePage.isEmpty());
 
-        var recipe = recipeService.searchRecipe("Gurke");
-        assertEquals("[]",recipe.toString());
-
-        assertEquals(new java.util.ArrayList<>(List.of()), recipeService.searchRecipe("Kaschew"));
-        assertEquals(0, recipeService.searchRecipe("Kaschew").size());
-
+        recipePage = recipeService.getRecipesByName("Kaschew", pageable);
+        Assertions.assertTrue(recipePage.isEmpty());
     }
 }
